Update ticker API endpoint for production
- Changed API endpoint from /api/tweets to http://localhost:5001/api/tweets
- Fixed port conflict with AirPlay Receiver on port 5000
- Backend now runs on port 5001 to avoid macOS conflicts
- Ticker now properly connects to Flask backend with X API integration

--- a/stats/index.html
+++ b/stats/index.html
@@ -277,7 +277,7 @@
                 username: 'JesseRodPodcast',
                 refreshInterval: 15 * 60 * 1000, // 15 minutes
                 maxTweets: 5,
-                apiEndpoint: '/api/tweets' // You'll create this endpoint
+                apiEndpoint: 'http://localhost:5001/api/tweets' // Backend API endpoint
             };
 
             let isTickerPaused = false;
